--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     font-family: Roboto-Regular;
     src: url(../fonts/Roboto-Regular.ttf);
 }
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(../fonts/Roboto-Medium.ttf);
+}
 
 body {
     margin: 0;
