--- a/css/top.css
+++ b/css/top.css
@@ -1,3 +1,32 @@
+@font-face {
+    font-family: NotoSansJP-Bold;
+    src: url(../fonts/NotoSansJP-Bold.otf);
+}
+
+@font-face {
+    font-family: NotoSansJP-Medium;
+    src: url(../fonts/NotoSansJP-Medium.otf);
+}
+
+@font-face {
+    font-family: NotoSansJP-Regular;
+    src: url(../fonts/NotoSansJP-Regular.otf);
+}
+
+@font-face {
+    font-family: Roboto-Bold;
+    src: url(../fonts/Roboto-Bold.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Regular;
+    src: url(../fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto-Medium;
+    src: url(../fonts/Roboto-Medium.ttf);
+}
 
 .main-content-top,
 .intro_top,
@@ -5,29 +34,49 @@
 .banner3 {
     position: absolute;
 }
+
 .banner3 {
     background-image: url('../img/Banner3.png');
     background-size: cover;
     width: 100%;
     height: 700px;
 }
+
 .intro_top {
-    font-family: "NotoSansJP-Bold";
+    font-family: "Roboto-Medium";
     font-size: 46px;
     color: #FFFFFF;
     margin-top: 170px;
     margin-left: 200px;
 }
+
 .main-content-top:first-of-type {
     position: relative;
     display: inline-block;
 }
+
 .main-content-top {
     background-color: #FFFFFF;
     width: 1180px;
     margin-top: 570px;
 }
 .new-event{
+    display: flex;
+    justify-content: space-between;
+}
+
+.new-event p{
     font-family: "Roboto-Bold";
     font-size: 62px;
+}
+.button2 {
+    margin-top: 28px;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Roboto-Bold";
 }
