--- a/css/pickup.css
+++ b/css/pickup.css
@@ -48,6 +48,9 @@
     color: #FFFFFF;
     margin-top: 170px;
 }
+.breadcrumbs{
+    margin-top: 60px;
+}
 .news_list{
     display: flex;
     margin-top: 30px;
