--- a/css/top.css
+++ b/css/top.css
@@ -49,7 +49,9 @@
     margin-top: 170px;
     margin-left: 200px;
 }
-
+.breadcrumbs{
+    margin-top: 45px;
+}
 .main-content-top:first-of-type {
     position: relative;
     display: inline-block;
@@ -59,6 +61,11 @@
     background-color: #FFFFFF;
     width: 1180px;
     margin-top: 570px;
+}
+.notify{
+    font-size: 16px;
+    margin-bottom: 60px;
+    font-family: NotoSansJP-Bold;
 }
 .new-event{
     display: flex;
@@ -79,4 +86,128 @@
     display: inline-block;
     font-size: 16px;
     font-family: "Roboto-Bold";
+}
+.news-title {
+    display: flex;
+    justify-content: space-between;
+}
+.post_list{
+    display: flex;
+    justify-content: space-between;
+}
+.post_list-item{
+    max-width: 510px;
+}
+.post_date {
+    display: flex;
+    margin-bottom: 20px;
+}
+.date{
+    color: #B0B0B0;
+    font-family: "NotoSansJP-Regular";
+    font-size: 18px;
+}
+.new{
+    color: #FF3333;
+    margin-left: 20px;
+    border: 1px solid #FF3333;
+    padding: 5px;
+    font-family: "Roboto-Bold";
+    font-size: 16px;
+}
+
+.news-title a {
+    color: #333333;
+    font-family: "NotoSansJP-Regular";
+    font-size: 16px;
+}
+
+.arrow {
+    font-size: 1.2rem;
+}
+
+.n {
+    border-bottom: 2px solid #dddddd;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.column{
+    display: flex;
+    justify-content: space-between;
+}
+.column p{
+    font-family: "Roboto-Medium";
+    font-size: 62px;
+}
+.column_list{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 135px;
+}
+.column_list-item-left{
+    width: 420px;
+}
+.column_list_date {
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.column_list-item-right{
+    width: 605px;
+}
+.news_list{
+    display: flex;
+    margin-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid #dddddd;
+}
+.news-content{
+    display: flex;
+    margin-left: 45px;
+}
+.post_date {
+    display: flex;
+    margin-bottom: 20px;
+}
+.date{
+    color: #B0B0B0;
+    font-family: "NotoSansJP-Regular";
+    font-size: 18px;
+}
+.new{
+    color: #FF3333;
+    margin-left: 20px;
+    border: 1px solid #FF3333;
+    padding: 5px;
+    font-family: "Roboto-Bold";
+    font-size: 16px;
+}
+
+.news-title a {
+    color: #333333;
+    font-family: "NotoSansJP-Medium";
+    font-size: 20px;
+}
+.news-item{
+    margin-right: 50px;
+}
+.a{
+    display: table;
+}
+.arrow{
+    display: table-cell; /* Important */
+    vertical-align: middle; /* Important */
+    font-size: 1.5rem;
+}
+.n{
+    border-bottom: 2px solid #dddddd;
+
+}
+.about{
+    font-size: 62px;
+    font-family: Roboto-Medium;
+}
+.about-item{
+    display: flex;
+    justify-content: space-between;
 }
