--- a/css/top.css
+++ b/css/top.css
@@ -49,9 +49,11 @@
     margin-top: 170px;
     margin-left: 200px;
 }
-.breadcrumbs{
+
+.breadcrumbs {
     margin-top: 45px;
 }
+
 .main-content-top:first-of-type {
     position: relative;
     display: inline-block;
@@ -62,20 +64,23 @@
     width: 1180px;
     margin-top: 570px;
 }
-.notify{
+
+.notify {
     font-size: 16px;
     margin-bottom: 60px;
     font-family: NotoSansJP-Bold;
 }
-.new-event{
+
+.new-event {
     display: flex;
     justify-content: space-between;
 }
 
-.new-event p{
+.new-event p {
     font-family: "Roboto-Bold";
     font-size: 62px;
 }
+
 .button2 {
     margin-top: 28px;
     background-color: #FFFFFF;
@@ -87,27 +92,33 @@
     font-size: 16px;
     font-family: "Roboto-Bold";
 }
+
 .news-title {
     display: flex;
     justify-content: space-between;
 }
-.post_list{
+
+.post_list {
     display: flex;
     justify-content: space-between;
 }
-.post_list-item{
+
+.post_list-item {
     max-width: 510px;
 }
+
 .post_date {
     display: flex;
     margin-bottom: 20px;
 }
-.date{
+
+.date {
     color: #B0B0B0;
     font-family: "NotoSansJP-Regular";
     font-size: 18px;
 }
-.new{
+
+.new {
     color: #FF3333;
     margin-left: 20px;
     border: 1px solid #FF3333;
@@ -131,50 +142,61 @@
     margin-top: 20px;
     margin-bottom: 30px;
 }
-.column{
+
+.column {
     display: flex;
     justify-content: space-between;
 }
-.column p{
+
+.column p {
     font-family: "Roboto-Medium";
     font-size: 62px;
 }
-.column_list{
+
+.column_list {
     display: flex;
     justify-content: space-between;
     margin-bottom: 135px;
 }
-.column_list-item-left{
+
+.column_list-item-left {
     width: 420px;
 }
+
 .column_list_date {
     display: flex;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.column_list-item-right{
+
+.column_list-item-right {
     width: 605px;
 }
-.news_list{
+
+.news_list {
     display: flex;
     margin-top: 30px;
     padding-bottom: 30px;
     border-bottom: 2px solid #dddddd;
 }
-.news-content{
+
+.news-content {
     display: flex;
     margin-left: 45px;
 }
+
 .post_date {
     display: flex;
     margin-bottom: 20px;
 }
-.date{
+
+.date {
     color: #B0B0B0;
     font-family: "NotoSansJP-Regular";
     font-size: 18px;
 }
-.new{
+
+.new {
     color: #FF3333;
     margin-left: 20px;
     border: 1px solid #FF3333;
@@ -188,65 +210,82 @@
     font-family: "NotoSansJP-Medium";
     font-size: 20px;
 }
-.news-item{
+
+.news-item {
     margin-right: 50px;
 }
-.a{
+
+.a {
     display: table;
 }
-.arrow{
-    display: table-cell; /* Important */
-    vertical-align: middle; /* Important */
+
+.arrow {
+    display: table-cell;
+    /* Important */
+    vertical-align: middle;
+    /* Important */
     font-size: 1.5rem;
 }
-.n{
+
+.n {
     border-bottom: 2px solid #dddddd;
 
 }
-.about{
+
+.about {
     font-size: 62px;
     font-family: Roboto-Medium;
 }
-.about-tile{
+
+.about-tile {
     font-size: 16px;
     font-family: NotoSansJP-Bold;
     margin-bottom: 55px;
 }
-.about-item{
+
+.about-item {
     display: flex;
     justify-content: space-between;
 }
-.item_img{
-   margin-top: 23px;
+
+.item_img {
+    margin-top: 23px;
 }
-.item_span{
+
+.item_span {
     width: 818px;
     font-size: 16px;
     font-family: NotoSansJP-Regular;
 }
-.alt{
+
+.alt {
     text-align: center;
     margin-top: 50px;
 }
-.youtube{
+
+.youtube {
     margin-top: 30px;
     margin-bottom: 121px;
 }
-.altcircle_tile{
+
+.altcircle_tile {
     text-align: center;
     font-size: 30px;
     font-family: NotoSansJP-Bold;
 }
-.altcircle_tile span{
+
+.altcircle_tile span {
     margin-left: 20px;
     margin-right: 20px;
 }
-.altcircle_img{
+
+.altcircle_img {
     margin-top: 90px;
     margin-bottom: 25px;
     text-align: center;
 }
-.altcircle_list{
+
+.altcircle_list {
     width: 660px;
     border: 1px solid #FFAC3E;
     border-radius: 10px;
@@ -255,20 +294,28 @@
     padding: 20px;
     margin: 0 auto 135px;
 }
-.altcircle_list ion-icon{
+
+.altcircle_list ion-icon {
     color: #FFAC3E;
 }
-.tab-tile{
+
+.tab>.active {
+    display: block !important;
+}
+
+.tab-tile {
     text-align: center;
     font-size: 30px;
     font-family: NotoSansJP-Bold;
     margin-bottom: 75px;
 }
-.tab_tile span{
+
+.tab_tile span {
     margin-left: 20px;
     margin-right: 20px;
 }
-.tab-button{
+
+.tab-button {
     border: 0;
     border-bottom: 2px solid #707070;
     background-color: #FFFFFF;
@@ -276,20 +323,100 @@
     font-size: 16px;
     font-family: NotoSansJP-Bold;
 }
-.tab-item{
+
+.tab-item {
     width: 900px;
     margin: 40px auto 0;
     display: flex;
 
 }
-.tab-item-img{
+
+.tab-item-img {
     margin-top: 26px;
 }
-.table-item-span{
+
+.table-item-span {
     border: 1px solid #0A68CE;
     padding: 20px;
     margin-left: 25px;
 }
-/*.table-item-span p{*/
-/*    margin-bottom: 0;*/
-/*}*/
+
+.table-item-span p {
+    margin-bottom: 0;
+}
+
+/* sdjfj */
+.download {
+    margin-top: 190px;
+}
+
+.download-tile {
+    display: flex;
+    justify-content: space-between;
+}
+
+.download-tile p {
+    font-family: "Roboto-Medium";
+    font-size: 62px;
+}
+
+.download-p {
+    font-family: NotoSansJP-Bold;
+    font-size: 16px;
+}
+.download-list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.down-list-item-top {
+    background-color: #0A68CE;
+    color: #FFFFFF;
+    width: 330px;
+    height: 70px;
+    font-family: NotoSansJP-Bold;
+    font-size: 21px;
+    text-align: center;
+}
+
+.down-list-item-bottom {
+    width: 330px;
+    height: 410px;
+    border: 1px solid #EDEAFF;
+    box-shadow: 5px 5px 5px #EDEAFF;
+}
+
+.down-list-item-bottom-img {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.down-list-item-bottom-date {
+    font-family: "Roboto-Bold";
+    font-size: 18px;
+    color: #B0B0B0;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.down-list-item-bottom-content {
+    font-family: NotoSansJP-Regular;
+    font-size: 16px;
+    margin-top: 5px;
+    margin-left: 20px;
+    margin-right: 15px;
+}
+.button-download{
+    text-align: center;
+}
+.button3 {
+    margin-bottom: 10px;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    padding: 6px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "Roboto-Bold";
+}
