--- a/css/top.css
+++ b/css/top.css
@@ -309,26 +309,62 @@
     font-family: NotoSansJP-Bold;
     margin-bottom: 75px;
 }
+.tab-main{
+    display: flex;
+    justify-content: space-between;
+}
 
+/* Tab Links */
+.tab-bar{
+    display:flex;
+  }
+  .tab-links {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+    font-size: 13px;
+    transition: 0.2s ease;
+  }
+  .tablinks:hover{
+    background:#fff;
+    color:#0A68CE;
+  }
+  /* Tab active */
+  .tab-links.active {
+    background:#fff;
+    color:#0A68CE;
+  }
+  
+  /* tab content */
+  .tab-content {
+    display: none;
+    font-family: "NotoSansJP-Regular";
+    font-size: 16px;
+  }
+
+  /* tab content active */
+  .tab-content.active {
+    display: block;
+  }
+/* dnodmvjfk */
 .tab_tile span {
     margin-left: 20px;
     margin-right: 20px;
 }
 
-.tab-button {
+.tab-links {
     border: 0;
     border-bottom: 2px solid #707070;
     background-color: #FFFFFF;
-    padding: 10px 20px;
+    padding: 10px 15px;
     font-size: 16px;
     font-family: NotoSansJP-Bold;
 }
 
 .tab-item {
     width: 900px;
-    margin: 40px auto 0;
     display: flex;
-
 }
 
 .tab-item-img {
@@ -341,10 +377,37 @@
     margin-left: 25px;
 }
 
-.table-item-span p {
-    margin-bottom: 0;
+.wrapper_tabcontent{
+    margin-top: 35px;
+    min-width: 800px;
 }
-
+.tab-btn{
+    display: flex;
+    align-items: center;
+    
+}
+  
+.tab-btn a{
+    padding: 3px 22px;
+    border-radius: 50%;
+    border: 2px solid #0A68CE;
+    font-size: 2rem;
+    
+}
+.tab-btn a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+/* .previous {
+    background-color: #f1f1f1;
+    color: black;
+  }
+  
+.next {
+    background-color: #04AA6D;
+    color: white;
+} */
 /* sdjfj */
 .download {
     margin-top: 190px;
@@ -364,7 +427,8 @@
     font-family: NotoSansJP-Bold;
     font-size: 16px;
 }
-.download-list{
+
+.download-list {
     display: flex;
     justify-content: space-between;
 }
@@ -377,6 +441,7 @@
     font-family: NotoSansJP-Bold;
     font-size: 21px;
     text-align: center;
+    padding-top: 21px;
 }
 
 .down-list-item-bottom {
@@ -391,12 +456,11 @@
     margin-top: 40px;
 }
 
-.down-list-item-bottom-date {
+.down-list-item-bottom p:first-child {
     font-family: "Roboto-Bold";
     font-size: 18px;
     color: #B0B0B0;
-    margin-top: 15px;
-    margin-left: 20px;
+    min-height: 25px;
 }
 
 .down-list-item-bottom-content {
@@ -405,12 +469,14 @@
     margin-top: 5px;
     margin-left: 20px;
     margin-right: 15px;
+    min-height: 130px;
 }
-.button-download{
+
+.button-download {
     text-align: center;
 }
+
 .button3 {
-    margin-bottom: 10px;
     background-color: #FFFFFF;
     border-radius: 25px;
     padding: 6px;
@@ -419,4 +485,29 @@
     display: inline-block;
     font-size: 16px;
     font-family: "Roboto-Bold";
+}
+
+.user-tile {
+    margin-top: 95px;
+    font-family: "Roboto-Medium";
+    font-size: 62px;
+}
+.user-list{
+    margin-top: 60px;
+    margin-bottom: 80px;
+}
+.user-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.user-img {
+    width: 453px;
+    height: 453px;
+}
+
+.user-content {
+    width: 570px;
+    display: flex;
+    align-items: center;
 }
