--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,12 @@ table.table-item-2 tbody tr td {
     margin-top: 20px;
 }
 
+.table-content-3 {
+    height: 101px;
+    width: 100%;
+    overflow-x: scroll;
+}
+
 .table-tile-3 {
     color: #0A68CE;
     font-family: "NotoSansJP-Bold";
@@ -390,42 +396,91 @@ table.table-item-2 tbody tr td {
 }
 
 .table-item-3 {
-    height: 101px;
-    width: 981px;
-    overflow: scroll;
+    width: 140%;
 }
 
 table.table-item-3 tbody tr td {
     border: 1px solid #DFDFDF;
 }
 
-/*.scrollbar {*/
-/*    background-color: #F5F5F5;*/
-/*    float: left;*/
-/*    height: 300px;*/
-/*    margin-bottom: 25px;*/
-/*    margin-left: 22px;*/
-/*    margin-top: 40px;*/
-/*    width: 65px;*/
-/*    overflow-y: scroll;*/
-/*}*/
+.table-content-4 {
+    margin-top: 40px;
+    width: 981px;
+    overflow-x: scroll;
+}
 
-/*.force-overflow {*/
-/*    min-height: 450px;*/
-/*}*/
+::-webkit-scrollbar {
+    width: 100%;
+    height: 12px;
+}
 
-/*#style-1::-webkit-scrollbar {*/
-/*    width: 6px;*/
-/*    background-color: #F5F5F5;*/
-/*}*/
-/*#style-1::-webkit-scrollbar-thumb {*/
-/*    background-color: #000000;*/
-/*}*/
-/*#style-1::-webkit-scrollbar-track {*/
-/*    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-/*    background-color: #F5F5F5;*/
-/*}*/
+::-webkit-scrollbar-track {
+    background-color: #EDEAFF;
+    border-radius: 7px;
+    border-bottom: 7px solid white;
+    border-top: 7px solid white;
+}
 
+::-webkit-scrollbar-thumb {
+    background-color: #0A68CE;
+    border-radius: 100px;
+}
+
+.table-item-4 {
+    width: 1264px;
+}
+
+table.table-item-4 thead {
+    background: #C1DAF5;
+}
+/* dfvh */
+/* Tab Links */
+.tabs{
+    display:flex;
+    margin-top: 45px;
+  }
+  .tablinks {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+    padding: 15px;
+    font-size: 13px;
+    transition: 0.2s ease;
+    font-family: "NotoSansJP-Bold";
+    font-size: 16px;
+    background:#fff;
+    border-bottom: 3.5px solid #EDEAFF;
+  }
+  .tablinks:hover{
+    background:#fff;
+    color:#0A68CE;
+  }
+  /* Tab active */
+  .tablinks.active {
+    background:#fff;
+    color:#0A68CE;
+    border-bottom: 3.5px solid #0A68CE;
+  }
+  
+  /* tab content */
+  .tabcontent {
+    display: none;
+    font-family: "NotoSansJP-Regular";
+    font-size: 16px;
+  }
+  /* Text*/
+  .tabcontent p {
+    color: #333;
+    margin-top: 40px;
+    font-size: 16px;
+  }
+  /* tab content active */
+  .tabcontent.active {
+    display: block;
+  }
+
+/* dbhds */
 .news-title-6 {
     margin-top: 135px;
     margin-bottom: 40px;
